# PyIMUSim

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
examples/: demo_simple.py  demo_torch_gpu.py  visualize_imu.py
pyimusim/: __init__.py  backend.py  environment.py  imus.py  math.py  platform.py  sensors.py  simulation.py  trajectory.py
pyimusim.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_math.py  test_simulation.py  test_trajectory.py
